[tool.poetry]
name = "beeline"
version = "0.1.0"
description = "BEELINE: evaluation of algorithms for gene regulatory network inference"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
networkx = "^2.8.6"
seaborn = "^0.12.0"
tqdm = "^4.64.1"
numpy = "^1.23.3"
scikit-learn = "^1.1.2"
PyYAML = "^6.0"
rpy2 = "^3.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
